@@ -1,10 +1,14 @@
+<%- |
+  String[1] $state,
+  String[1] $mode
+| -%>
 # This file controls the state of SELinux on the system.
 # SELINUX= can take one of these three values:
 # enforcing - SELinux security policy is enforced.
 # permissive - SELinux prints warnings instead of enforcing.
 # disabled - SELinux is fully disabled.
-SELINUX=<%= @_state %>
+SELINUX=<%= $state %>
 # SELINUXTYPE= type of policy in use. Possible values are:
 # targeted - Only targeted network daemons are protected.
 # strict - Full SELinux protection.
-SELINUXTYPE=<%= @_mode %>
+SELINUXTYPE=<%= $mode %>
